zutil-inheritance/tests/failure/thread_non_send_parent.stderr
error[E0277]: `RefCell<u32>` cannot be shared between threads safely
  --> tests/failure/thread_non_send_parent.rs:31:16
   |
31 |       thread::spawn(move || {
   |  _____-------------_^
   | |     |
   | |     required by a bound introduced by this call
32 | |         let _ = (*b).fields().a.borrow_mut();
33 | |     });
   | |_____^ `RefCell<u32>` cannot be shared between threads safely
   |
   = help: within `BStorage`, the trait `Sync` is not implemented for `RefCell<u32>`
   = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
note: required because it appears within the type `AFields`
  --> tests/failure/thread_non_send_parent.rs:19:9
   |
19 |     struct A() {
   |            ^
note: required because it appears within the type `AStorage`
  --> tests/failure/thread_non_send_parent.rs:19:9
   |
19 |     struct A() {
   |            ^
note: required because it appears within the type `BStorage`
  --> tests/failure/thread_non_send_parent.rs:26:9
   |
26 |     struct B(A): Send + Sync {}
   |            ^
note: required for `B` to implement `Send`
  --> tests/failure/thread_non_send_parent.rs:25:1
   |
25 | / zutil_inheritance::value! {
26 | |     struct B(A): Send + Sync {}
   | |            ^
27 | |     impl Self {}
28 | | }
   | |_^
note: required because it's used within this closure
  --> tests/failure/thread_non_send_parent.rs:31:16
   |
31 |     thread::spawn(move || {
   |                   ^^^^^^^
note: required by a bound in `spawn`
  --> $RUST/std/src/thread/functions.rs
   |
   | pub fn spawn<F, T>(f: F) -> JoinHandle<T>
   |        ----- required by a bound in this function
...
   |     F: Send + 'static,
   |        ^^^^ required by this bound in `spawn`
   = note: this error originates in the macro `zutil_inheritance::value` (in Nightly builds, run with -Z macro-backtrace for more info)
